--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,10 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Your Style App</title>
+
+    <!-- TODO translate header as well -->
+    <!-- TODO header should display current page's title -->
+    <title>Your Style - Men's finest encyclopedia</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
